# Bachelor-Thesis

./: CMakeLists.txt  main.cpp
src/: AdaptiveAlg.h
src/Algotrithms/: AdaptiveShiversSort.cpp  AdaptiveShiversSort.h  BinaryInsertionSort.cpp  BinaryInsertionSort.h  InsertionSort.cpp  InsertionSort.h  MergeSort.cpp  MergeSort.h  PowerSort.h  QuickSort.cpp  QuickSort.h  SortingAlgorithm.h  TimSort.h
src/Analysis/: DisorderMetrics.cpp  DisorderMetrics.h  Evaluator.h  Metric.h
src/Data/: ArrayType.h  DataGenerator.cpp  DataGenerator.h  ExperimentConfigurator.h  Sampler.h  SamplingStrategy.h
src/DisorderMetrics/: DisorderMetrics.cpp  DisorderMetrics.h
src/experiment_data_input/permutation/10000/samples/sqrt n/cluster sampling/2log2 smlLength/: samples.csv
src/experiment_data_input/permutation/10000/samples/sqrt n/cluster sampling/2sqrt smlLength/: samples.csv
src/experiment_data_input/permutation/10000/samples/sqrt n/cluster sampling/log2 smlLength/: samples.csv
src/experiment_data_input/permutation/10000/samples/sqrt n/cluster sampling/smlLength/: samples.csv
src/experiment_data_input/permutation/10000/samples/sqrt n/cluster sampling/sqrt smlLength/: samples.csv
src/experiment_data_input/permutation/10000/samples/sqrt n/combined sampling/2 smlLength/: samples.csv
src/experiment_data_input/permutation/10000/samples/sqrt n/combined sampling/n div 10/: samples.csv
src/experiment_data_input/permutation/10000/samples/sqrt n/combined sampling/n div 20/: samples.csv
src/experiment_data_input/permutation/10000/samples/sqrt n/combined sampling/n div 4/: samples.csv
src/experiment_data_input/permutation/10000/samples/sqrt n/combined sampling/smlLength/: samples.csv
src/experiment_data_input/permutation/10000/samples/sqrt n/stratified sampling/2 smlLength/: samples.csv
src/experiment_data_input/permutation/10000/samples/sqrt n/stratified sampling/n div 10/: samples.csv
src/experiment_data_input/permutation/10000/samples/sqrt n/stratified sampling/n div 20/: samples.csv
src/experiment_data_input/permutation/10000/samples/sqrt n/stratified sampling/n div 4/: samples.csv
src/experiment_data_input/permutation/10000/samples/sqrt n/stratified sampling/smlLength/: samples.csv
src/experiment_data_output/permutation/10000/: arrays_metrics.csv
src/experiment_data_output/permutation/10000/samples/sqrt n/cluster sampling/2log2 smlLength/: sample_metrics.csv
src/experiment_data_output/permutation/10000/samples/sqrt n/cluster sampling/2sqrt smlLength/: sample_metrics.csv
src/experiment_data_output/permutation/10000/samples/sqrt n/cluster sampling/log2 smlLength/: sample_metrics.csv
src/experiment_data_output/permutation/10000/samples/sqrt n/cluster sampling/smlLength/: sample_metrics.csv
src/experiment_data_output/permutation/10000/samples/sqrt n/cluster sampling/sqrt smlLength/: sample_metrics.csv
src/experiment_data_output/permutation/10000/samples/sqrt n/combined sampling/2 smlLength/: sample_metrics.csv
src/experiment_data_output/permutation/10000/samples/sqrt n/combined sampling/n div 10/: sample_metrics.csv
src/experiment_data_output/permutation/10000/samples/sqrt n/combined sampling/n div 20/: sample_metrics.csv
src/experiment_data_output/permutation/10000/samples/sqrt n/combined sampling/n div 4/: sample_metrics.csv
src/experiment_data_output/permutation/10000/samples/sqrt n/combined sampling/smlLength/: sample_metrics.csv
src/experiment_data_output/permutation/10000/samples/sqrt n/stratified sampling/2 smlLength/: sample_metrics.csv
src/experiment_data_output/permutation/10000/samples/sqrt n/stratified sampling/n div 10/: sample_metrics.csv
src/experiment_data_output/random_array/10000/k/2500/: arrays_metrics.csv
src/experiment_data_output/random_array/10000/k/5000/: arrays_metrics.csv
src/experiment_data_output/random_array/10000/k/7500/: arrays_metrics.csv
src/experiment_data_output/random_array/10000/k/9000/: arrays_metrics.csv
src/experiment_data_output/run_array/10000/r/2sqrt n/: arrays_metrics.csv
src/experiment_data_output/run_array/10000/r/log2 n/: arrays_metrics.csv
src/experiment_data_output/run_array/10000/r/n div 10/: arrays_metrics.csv
src/experiment_data_output/run_array/10000/r/n div 20/: arrays_metrics.csv
src/experiment_data_output/run_array/10000/r/n div 4/: arrays_metrics.csv
src/experiment_data_output/run_array/10000/r/sqrt n/: arrays_metrics.csv
tests/: DataGeneratorTest.h  DisorderMetricsTest.h  SamplerTest.h  test_runner.cpp
(+303 files in other folders)
